public/docs/user/1.3/_sources/cli/apptainer_registry_login.rst.txt
.. _apptainer_registry_login:

apptainer registry login
------------------------

Login to an OCI/Docker registry

Synopsis
~~~~~~~~



  The 'registry login' command allows you to login to a specific OCI/Docker
  registry.

::

  apptainer registry login [login options...] <registry_uri>

Examples
~~~~~~~~

::


    To login in to a docker/OCI registry:
    $ apptainer registry login --username foo docker://docker.io
    $ apptainer registry login --username foo oras://myregistry.example.com

    Note that many cloud OCI registries use token-based authentication. The token
    should be specified as the password for login. A username is still required.
    E.g. when using a standard Azure identity and token to login to an ACR 
    registry, the username '00000000-0000-0000-0000-000000000000' is required.
    Consult your provider's documentation for details concerning their specific
    login requirements.

Options
~~~~~~~

::

  -h, --help              help for login
  -p, --password string   password / token to authenticate with
      --password-stdin    take password from standard input
  -u, --username string   username to authenticate with (required for Docker/OCI registry login)

SEE ALSO
~~~~~~~~

* :ref:`apptainer registry <apptainer_registry>` 	 - Manage authentication to OCI/Docker registries

*Auto generated by spf13/cobra on 25-Apr-2024*
